tests/snapshots/lexer_proptest__sample_document_tests__000_paragraphs_tokenization.snap
---
source: tests/lexer_proptest.rs
expression: tokens
---
[
    (
        Text(
            "Simple",
        ),
        0..6,
    ),
    (
        Whitespace,
        6..7,
    ),
    (
        Text(
            "Paragraphs",
        ),
        7..17,
    ),
    (
        Whitespace,
        17..18,
    ),
    (
        Text(
            "Test",
        ),
        18..22,
    ),
    (
        Whitespace,
        22..23,
    ),
    (
        Text(
            "{{paragraph}}",
        ),
        23..36,
    ),
    (
        Newline,
        36..37,
    ),
    (
        BlankLine(
            [
                (
                    Newline,
                    37..38,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "This",
        ),
        38..42,
    ),
    (
        Whitespace,
        42..43,
    ),
    (
        Text(
            "is",
        ),
        43..45,
    ),
    (
        Whitespace,
        45..46,
    ),
    (
        Text(
            "a",
        ),
        46..47,
    ),
    (
        Whitespace,
        47..48,
    ),
    (
        Text(
            "simple",
        ),
        48..54,
    ),
    (
        Whitespace,
        54..55,
    ),
    (
        Text(
            "paragraph",
        ),
        55..64,
    ),
    (
        Whitespace,
        64..65,
    ),
    (
        Text(
            "with",
        ),
        65..69,
    ),
    (
        Whitespace,
        69..70,
    ),
    (
        Text(
            "just",
        ),
        70..74,
    ),
    (
        Whitespace,
        74..75,
    ),
    (
        Text(
            "one",
        ),
        75..78,
    ),
    (
        Whitespace,
        78..79,
    ),
    (
        Text(
            "line",
        ),
        79..83,
    ),
    (
        Period,
        83..84,
    ),
    (
        Whitespace,
        84..85,
    ),
    (
        Text(
            "{{paragraph}}",
        ),
        85..98,
    ),
    (
        Newline,
        98..99,
    ),
    (
        BlankLine(
            [
                (
                    Newline,
                    99..100,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "This",
        ),
        100..104,
    ),
    (
        Whitespace,
        104..105,
    ),
    (
        Text(
            "is",
        ),
        105..107,
    ),
    (
        Whitespace,
        107..108,
    ),
    (
        Text(
            "a",
        ),
        108..109,
    ),
    (
        Whitespace,
        109..110,
    ),
    (
        Text(
            "multi",
        ),
        110..115,
    ),
    (
        Dash,
        115..116,
    ),
    (
        Text(
            "line",
        ),
        116..120,
    ),
    (
        Whitespace,
        120..121,
    ),
    (
        Text(
            "paragraph",
        ),
        121..130,
    ),
    (
        Period,
        130..131,
    ),
    (
        Newline,
        131..132,
    ),
    (
        Text(
            "It",
        ),
        132..134,
    ),
    (
        Whitespace,
        134..135,
    ),
    (
        Text(
            "continues",
        ),
        135..144,
    ),
    (
        Whitespace,
        144..145,
    ),
    (
        Text(
            "on",
        ),
        145..147,
    ),
    (
        Whitespace,
        147..148,
    ),
    (
        Text(
            "the",
        ),
        148..151,
    ),
    (
        Whitespace,
        151..152,
    ),
    (
        Text(
            "second",
        ),
        152..158,
    ),
    (
        Whitespace,
        158..159,
    ),
    (
        Text(
            "line",
        ),
        159..163,
    ),
    (
        Period,
        163..164,
    ),
    (
        Newline,
        164..165,
    ),
    (
        Text(
            "And",
        ),
        165..168,
    ),
    (
        Whitespace,
        168..169,
    ),
    (
        Text(
            "even",
        ),
        169..173,
    ),
    (
        Whitespace,
        173..174,
    ),
    (
        Text(
            "has",
        ),
        174..177,
    ),
    (
        Whitespace,
        177..178,
    ),
    (
        Text(
            "a",
        ),
        178..179,
    ),
    (
        Whitespace,
        179..180,
    ),
    (
        Text(
            "third",
        ),
        180..185,
    ),
    (
        Whitespace,
        185..186,
    ),
    (
        Text(
            "line",
        ),
        186..190,
    ),
    (
        Period,
        190..191,
    ),
    (
        Whitespace,
        191..192,
    ),
    (
        Text(
            "{{paragraph}}",
        ),
        192..205,
    ),
    (
        Newline,
        205..206,
    ),
    (
        BlankLine(
            [
                (
                    Newline,
                    206..207,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "Another",
        ),
        207..214,
    ),
    (
        Whitespace,
        214..215,
    ),
    (
        Text(
            "paragraph",
        ),
        215..224,
    ),
    (
        Whitespace,
        224..225,
    ),
    (
        Text(
            "follows",
        ),
        225..232,
    ),
    (
        Whitespace,
        232..233,
    ),
    (
        Text(
            "after",
        ),
        233..238,
    ),
    (
        Whitespace,
        238..239,
    ),
    (
        Text(
            "a",
        ),
        239..240,
    ),
    (
        Whitespace,
        240..241,
    ),
    (
        Text(
            "blank",
        ),
        241..246,
    ),
    (
        Whitespace,
        246..247,
    ),
    (
        Text(
            "line",
        ),
        247..251,
    ),
    (
        Period,
        251..252,
    ),
    (
        Whitespace,
        252..253,
    ),
    (
        Text(
            "{{paragraph}}",
        ),
        253..266,
    ),
    (
        Newline,
        266..267,
    ),
    (
        BlankLine(
            [
                (
                    Newline,
                    267..268,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "This",
        ),
        268..272,
    ),
    (
        Whitespace,
        272..273,
    ),
    (
        Text(
            "paragraph",
        ),
        273..282,
    ),
    (
        Whitespace,
        282..283,
    ),
    (
        Text(
            "has",
        ),
        283..286,
    ),
    (
        Whitespace,
        286..287,
    ),
    (
        Text(
            "some",
        ),
        287..291,
    ),
    (
        Whitespace,
        291..292,
    ),
    (
        Text(
            "special",
        ),
        292..299,
    ),
    (
        Whitespace,
        299..300,
    ),
    (
        Text(
            "characters",
        ),
        300..310,
    ),
    (
        Colon,
        310..311,
    ),
    (
        Whitespace,
        311..312,
    ),
    (
        Text(
            "!@#$%^&*",
        ),
        312..320,
    ),
    (
        OpenParen,
        320..321,
    ),
    (
        CloseParen,
        321..322,
    ),
    (
        Text(
            "_+",
        ),
        322..324,
    ),
    (
        Dash,
        324..325,
    ),
    (
        Equals,
        325..326,
    ),
    (
        Text(
            "[]{}|;'",
        ),
        326..333,
    ),
    (
        Colon,
        333..334,
    ),
    (
        Quote,
        334..335,
    ),
    (
        Comma,
        335..336,
    ),
    (
        Period,
        336..337,
    ),
    (
        Text(
            "/<>?",
        ),
        337..341,
    ),
    (
        Whitespace,
        341..342,
    ),
    (
        Text(
            "{{paragraph}}",
        ),
        342..355,
    ),
    (
        Newline,
        355..356,
    ),
    (
        BlankLine(
            [
                (
                    Newline,
                    356..357,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "Paragraphs",
        ),
        357..367,
    ),
    (
        Whitespace,
        367..368,
    ),
    (
        Text(
            "can",
        ),
        368..371,
    ),
    (
        Whitespace,
        371..372,
    ),
    (
        Text(
            "contain",
        ),
        372..379,
    ),
    (
        Whitespace,
        379..380,
    ),
    (
        Text(
            "numbers",
        ),
        380..387,
    ),
    (
        Colon,
        387..388,
    ),
    (
        Whitespace,
        388..389,
    ),
    (
        Number(
            "123",
        ),
        389..392,
    ),
    (
        Comma,
        392..393,
    ),
    (
        Whitespace,
        393..394,
    ),
    (
        Number(
            "456",
        ),
        394..397,
    ),
    (
        Comma,
        397..398,
    ),
    (
        Whitespace,
        398..399,
    ),
    (
        Number(
            "789",
        ),
        399..402,
    ),
    (
        Whitespace,
        402..403,
    ),
    (
        Text(
            "{{paragraph}}",
        ),
        403..416,
    ),
    (
        Newline,
        416..417,
    ),
    (
        BlankLine(
            [
                (
                    Newline,
                    417..418,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "And",
        ),
        418..421,
    ),
    (
        Whitespace,
        421..422,
    ),
    (
        Text(
            "they",
        ),
        422..426,
    ),
    (
        Whitespace,
        426..427,
    ),
    (
        Text(
            "can",
        ),
        427..430,
    ),
    (
        Whitespace,
        430..431,
    ),
    (
        Text(
            "have",
        ),
        431..435,
    ),
    (
        Whitespace,
        435..436,
    ),
    (
        Text(
            "mixed",
        ),
        436..441,
    ),
    (
        Whitespace,
        441..442,
    ),
    (
        Text(
            "content",
        ),
        442..449,
    ),
    (
        Colon,
        449..450,
    ),
    (
        Whitespace,
        450..451,
    ),
    (
        Text(
            "The",
        ),
        451..454,
    ),
    (
        Whitespace,
        454..455,
    ),
    (
        Text(
            "quick",
        ),
        455..460,
    ),
    (
        Whitespace,
        460..461,
    ),
    (
        Text(
            "brown",
        ),
        461..466,
    ),
    (
        Whitespace,
        466..467,
    ),
    (
        Text(
            "fox",
        ),
        467..470,
    ),
    (
        Whitespace,
        470..471,
    ),
    (
        Text(
            "jumps",
        ),
        471..476,
    ),
    (
        Whitespace,
        476..477,
    ),
    (
        Text(
            "over",
        ),
        477..481,
    ),
    (
        Whitespace,
        481..482,
    ),
    (
        Text(
            "the",
        ),
        482..485,
    ),
    (
        Whitespace,
        485..486,
    ),
    (
        Text(
            "lazy",
        ),
        486..490,
    ),
    (
        Whitespace,
        490..491,
    ),
    (
        Text(
            "dog",
        ),
        491..494,
    ),
    (
        Period,
        494..495,
    ),
    (
        Whitespace,
        495..496,
    ),
    (
        Number(
            "123",
        ),
        496..499,
    ),
    (
        Whitespace,
        499..500,
    ),
    (
        Text(
            "ABC",
        ),
        500..503,
    ),
    (
        Whitespace,
        503..504,
    ),
    (
        Text(
            "def!",
        ),
        504..508,
    ),
    (
        Whitespace,
        508..509,
    ),
    (
        Text(
            "{{paragraph}}",
        ),
        509..522,
    ),
    (
        Newline,
        522..523,
    ),
]
