tests/snapshots/lexer_proptest__sample_document_tests__010_sessions_flat_single_tokenization.snap
---
source: tests/lexer_proptest.rs
expression: tokens
---
[
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Newline,
    Newline,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Newline,
    Newline,
    Number,
    Period,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Newline,
    IndentLevel,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Newline,
    Newline,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Newline,
    Newline,
    DedentLevel,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Newline,
    Newline,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Newline,
    IndentLevel,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Newline,
    Newline,
    DedentLevel,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Newline,
    DedentLevel,
]
