tests/snapshots/lexer_proptest__sample_document_tests__020_sessions_flat_multiple_tokenization.snap
---
source: tests/lexer_proptest.rs
expression: tokens
---
[
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Newline,
    Newline,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Newline,
    Newline,
    Number,
    Period,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Newline,
    Indent,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Newline,
    Newline,
    Indent,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Newline,
    Newline,
    Number,
    Period,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Newline,
    Indent,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Newline,
    Newline,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Newline,
    Newline,
    Number,
    Period,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Newline,
    Indent,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Newline,
    Newline,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Newline,
    Newline,
    Number,
    Period,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Newline,
    Indent,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Newline,
    Indent,
    Indent,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Newline,
    Newline,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Newline,
]
