tests/snapshots/lexer_proptest__sample_document_tests__040_lists_tokenization.snap
---
source: tests/lexer_proptest.rs
expression: tokens
---
[
    DocStart,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Newline,
    Newline,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Newline,
    Newline,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Colon,
    Whitespace,
    Text,
    Newline,
    Newline,
    Dash,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Dash,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Dash,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Newline,
    Text,
    Whitespace,
    Text,
    Colon,
    Whitespace,
    Text,
    Newline,
    Newline,
    Number,
    Period,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Number,
    Period,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Number,
    Period,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Newline,
    Text,
    Whitespace,
    Text,
    Colon,
    Whitespace,
    Text,
    Newline,
    Newline,
    Text,
    Period,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Text,
    Period,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Text,
    Period,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Newline,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    OpenParen,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    CloseParen,
    Colon,
    Whitespace,
    Text,
    Newline,
    Newline,
    Number,
    Period,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Dash,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Text,
    Period,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Newline,
    Text,
    Whitespace,
    Text,
    Colon,
    Whitespace,
    Text,
    Newline,
    Newline,
    OpenParen,
    Number,
    CloseParen,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    OpenParen,
    Number,
    CloseParen,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    OpenParen,
    Number,
    CloseParen,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Newline,
    Text,
    Whitespace,
    Text,
    Colon,
    Whitespace,
    Text,
    Newline,
    Newline,
    Text,
    Period,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Text,
    Period,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Text,
    Period,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Newline,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Colon,
    Whitespace,
    Text,
    Newline,
    Newline,
    Dash,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Dash,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    Dash,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Whitespace,
    Text,
    Period,
    Whitespace,
    Text,
    Dash,
    Text,
    Newline,
    DocEnd,
]
