tests/snapshots/lexer_proptest__sample_document_tests__050_paragraph_lists_tokenization.snap
---
source: tests/lexer_proptest.rs
assertion_line: 70
expression: tokens
---
[
    Text(
        "Paragraphs",
    ),
    Whitespace,
    Text(
        "vs",
    ),
    Whitespace,
    Text(
        "Lists",
    ),
    Whitespace,
    Text(
        "Disambiguation",
    ),
    Whitespace,
    Text(
        "Test",
    ),
    Whitespace,
    Text(
        "{{paragraph}}",
    ),
    Newline,
    BlankLine,
    Text(
        "This",
    ),
    Whitespace,
    Text(
        "document",
    ),
    Whitespace,
    Text(
        "tests",
    ),
    Whitespace,
    Text(
        "the",
    ),
    Whitespace,
    Text(
        "disambiguation",
    ),
    Whitespace,
    Text(
        "between",
    ),
    Whitespace,
    Text(
        "paragraphs",
    ),
    Whitespace,
    Text(
        "and",
    ),
    Whitespace,
    Text(
        "lists",
    ),
    Comma,
    Whitespace,
    Text(
        "including",
    ),
    Whitespace,
    Text(
        "edge",
    ),
    Whitespace,
    Text(
        "cases",
    ),
    Period,
    Whitespace,
    Text(
        "{{paragraph}}",
    ),
    Newline,
    BlankLine,
    Text(
        "Single",
    ),
    Whitespace,
    Text(
        "item",
    ),
    Whitespace,
    Text(
        "with",
    ),
    Whitespace,
    Text(
        "dash",
    ),
    Whitespace,
    OpenParen,
    Text(
        "illegal",
    ),
    Whitespace,
    Text(
        "list",
    ),
    Comma,
    Whitespace,
    Text(
        "becomes",
    ),
    Whitespace,
    Text(
        "paragraph",
    ),
    CloseParen,
    Colon,
    Whitespace,
    Text(
        "{{paragraph}}",
    ),
    Newline,
    Dash,
    Whitespace,
    Text(
        "This",
    ),
    Whitespace,
    Text(
        "is",
    ),
    Whitespace,
    Text(
        "not",
    ),
    Whitespace,
    Text(
        "a",
    ),
    Whitespace,
    Text(
        "list",
    ),
    Whitespace,
    Text(
        "{{paragraph}}",
    ),
    Newline,
    BlankLine,
    Text(
        "Single",
    ),
    Whitespace,
    Text(
        "item",
    ),
    Whitespace,
    Text(
        "with",
    ),
    Whitespace,
    Text(
        "number",
    ),
    Whitespace,
    OpenParen,
    Text(
        "illegal",
    ),
    Whitespace,
    Text(
        "list",
    ),
    Comma,
    Whitespace,
    Text(
        "becomes",
    ),
    Whitespace,
    Text(
        "paragraph",
    ),
    CloseParen,
    Colon,
    Whitespace,
    Text(
        "{{paragraph}}",
    ),
    Newline,
    Number(
        "1",
    ),
    Period,
    Whitespace,
    Text(
        "This",
    ),
    Whitespace,
    Text(
        "is",
    ),
    Whitespace,
    Text(
        "also",
    ),
    Whitespace,
    Text(
        "not",
    ),
    Whitespace,
    Text(
        "a",
    ),
    Whitespace,
    Text(
        "list",
    ),
    Whitespace,
    Text(
        "{{paragraph}}",
    ),
    Newline,
    BlankLine,
    Text(
        "Lists",
    ),
    Whitespace,
    Text(
        "require",
    ),
    Whitespace,
    Text(
        "at",
    ),
    Whitespace,
    Text(
        "least",
    ),
    Whitespace,
    Text(
        "two",
    ),
    Whitespace,
    Text(
        "items",
    ),
    Colon,
    Whitespace,
    Text(
        "{{paragraph}}",
    ),
    Newline,
    Dash,
    Whitespace,
    Text(
        "First",
    ),
    Whitespace,
    Text(
        "item",
    ),
    Whitespace,
    Text(
        "{{list",
    ),
    Dash,
    Text(
        "item}}",
    ),
    Newline,
    Dash,
    Whitespace,
    Text(
        "Second",
    ),
    Whitespace,
    Text(
        "item",
    ),
    Whitespace,
    Text(
        "{{list",
    ),
    Dash,
    Text(
        "item}}",
    ),
    Newline,
    BlankLine,
    Text(
        "Paragraph",
    ),
    Whitespace,
    Text(
        "followed",
    ),
    Whitespace,
    Text(
        "by",
    ),
    Whitespace,
    Text(
        "list",
    ),
    Whitespace,
    Text(
        "WITH",
    ),
    Whitespace,
    Text(
        "blank",
    ),
    Whitespace,
    Text(
        "line",
    ),
    Whitespace,
    OpenParen,
    Text(
        "required",
    ),
    CloseParen,
    Colon,
    Whitespace,
    Text(
        "{{paragraph}}",
    ),
    Newline,
    BlankLine,
    Dash,
    Whitespace,
    Text(
        "This",
    ),
    Whitespace,
    Text(
        "is",
    ),
    Whitespace,
    Text(
        "a",
    ),
    Whitespace,
    Text(
        "list",
    ),
    Whitespace,
    Text(
        "{{list",
    ),
    Dash,
    Text(
        "item}}",
    ),
    Newline,
    Dash,
    Whitespace,
    Text(
        "Blank",
    ),
    Whitespace,
    Text(
        "line",
    ),
    Whitespace,
    Text(
        "required",
    ),
    Whitespace,
    Text(
        "before",
    ),
    Whitespace,
    Text(
        "list",
    ),
    Whitespace,
    Text(
        "{{list",
    ),
    Dash,
    Text(
        "item}}",
    ),
    Newline,
    BlankLine,
    Text(
        "List",
    ),
    Whitespace,
    Text(
        "followed",
    ),
    Whitespace,
    Text(
        "by",
    ),
    Whitespace,
    Text(
        "paragraph",
    ),
    Whitespace,
    Text(
        "without",
    ),
    Whitespace,
    Text(
        "blank",
    ),
    Whitespace,
    Text(
        "line",
    ),
    Colon,
    Whitespace,
    Text(
        "{{paragraph}}",
    ),
    Newline,
    BlankLine,
    Dash,
    Whitespace,
    Text(
        "Last",
    ),
    Whitespace,
    Text(
        "list",
    ),
    Whitespace,
    Text(
        "item",
    ),
    Whitespace,
    Text(
        "{{list",
    ),
    Dash,
    Text(
        "item}}",
    ),
    Newline,
    Dash,
    Whitespace,
    Text(
        "Another",
    ),
    Whitespace,
    Text(
        "list",
    ),
    Whitespace,
    Text(
        "item",
    ),
    Whitespace,
    Text(
        "{{list",
    ),
    Dash,
    Text(
        "item}}",
    ),
    Newline,
    BlankLine,
    Text(
        "This",
    ),
    Whitespace,
    Text(
        "paragraph",
    ),
    Whitespace,
    Text(
        "follows",
    ),
    Whitespace,
    Text(
        "after",
    ),
    Whitespace,
    Text(
        "blank",
    ),
    Whitespace,
    Text(
        "line",
    ),
    Whitespace,
    Text(
        "{{paragraph}}",
    ),
    Newline,
    BlankLine,
    Text(
        "Blank",
    ),
    Whitespace,
    Text(
        "lines",
    ),
    Whitespace,
    Text(
        "between",
    ),
    Whitespace,
    Text(
        "list",
    ),
    Whitespace,
    Text(
        "items",
    ),
    Whitespace,
    OpenParen,
    Text(
        "illegal",
    ),
    Comma,
    Whitespace,
    Text(
        "becomes",
    ),
    Whitespace,
    Text(
        "separate",
    ),
    Whitespace,
    Text(
        "paragraphs",
    ),
    CloseParen,
    Colon,
    Whitespace,
    Text(
        "{{paragraph}}",
    ),
    Newline,
    Dash,
    Whitespace,
    Text(
        "This",
    ),
    Whitespace,
    Text(
        "is",
    ),
    Whitespace,
    Text(
        "not",
    ),
    Whitespace,
    Text(
        "{{paragraph}}",
    ),
    Newline,
    BlankLine,
    Dash,
    Whitespace,
    Text(
        "A",
    ),
    Whitespace,
    Text(
        "list",
    ),
    Whitespace,
    Text(
        "{{paragraph}}",
    ),
    Newline,
    BlankLine,
    Text(
        "Proper",
    ),
    Whitespace,
    Text(
        "list",
    ),
    Whitespace,
    Text(
        "with",
    ),
    Whitespace,
    Text(
        "blank",
    ),
    Whitespace,
    Text(
        "lines",
    ),
    Whitespace,
    Text(
        "around",
    ),
    Whitespace,
    Text(
        "it",
    ),
    Colon,
    Whitespace,
    Text(
        "{{paragraph}}",
    ),
    Newline,
    BlankLine,
    Dash,
    Whitespace,
    Text(
        "First",
    ),
    Whitespace,
    Text(
        "proper",
    ),
    Whitespace,
    Text(
        "list",
    ),
    Whitespace,
    Text(
        "item",
    ),
    Whitespace,
    Text(
        "{{list",
    ),
    Dash,
    Text(
        "item}}",
    ),
    Newline,
    Dash,
    Whitespace,
    Text(
        "Second",
    ),
    Whitespace,
    Text(
        "proper",
    ),
    Whitespace,
    Text(
        "list",
    ),
    Whitespace,
    Text(
        "item",
    ),
    Whitespace,
    Text(
        "{{list",
    ),
    Dash,
    Text(
        "item}}",
    ),
    Newline,
    BlankLine,
    Text(
        "Paragraph",
    ),
    Whitespace,
    Text(
        "after",
    ),
    Whitespace,
    Text(
        "proper",
    ),
    Whitespace,
    Text(
        "list",
    ),
    Period,
    Whitespace,
    Text(
        "{{paragraph}}",
    ),
    Newline,
    BlankLine,
    Text(
        "Valid",
    ),
    Whitespace,
    Text(
        "mixed",
    ),
    Whitespace,
    Text(
        "decoration",
    ),
    Whitespace,
    Text(
        "list",
    ),
    Colon,
    Whitespace,
    Text(
        "{{paragraph}}",
    ),
    Newline,
    Dash,
    Whitespace,
    Text(
        "First",
    ),
    Whitespace,
    Text(
        "item",
    ),
    Whitespace,
    Text(
        "{{list",
    ),
    Dash,
    Text(
        "item}}",
    ),
    Newline,
    Number(
        "1",
    ),
    Period,
    Whitespace,
    Text(
        "Second",
    ),
    Whitespace,
    Text(
        "item",
    ),
    Whitespace,
    Text(
        "{{list",
    ),
    Dash,
    Text(
        "item}}",
    ),
    Newline,
    Text(
        "a",
    ),
    Period,
    Whitespace,
    Text(
        "Third",
    ),
    Whitespace,
    Text(
        "item",
    ),
    Whitespace,
    Text(
        "{{list",
    ),
    Dash,
    Text(
        "item}}",
    ),
    Newline,
]
